# meld

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: CONFIG.md  INSTALL.md  OPERATIONS.md
examples/: init.lua
scripts/: install-config.sh  install.sh  uninstall.sh  update-config.sh  update.sh
src/: app.rs  cli.rs  error.rs  main.rs  output.rs
src/config/: documented.rs  mod.rs  parser.rs  schema.rs
src/modules/: git.rs  mod.rs  spotify.rs  system.rs
src/render/: backend.rs  blocks.rs  image.rs  layout.rs  logo.rs  mod.rs  plain.rs  style.rs  visual.rs
src/util/: process.rs
