[package]
name = "meld"
version = "0.1.0"
edition = "2024"
description = "Lua-configurable terminal fetch/status tool"
readme = "README.md"
publish = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
image = "0.25.8"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
owo-colors = "4.3.0"
ratatui = "0.30.0"
walkdir = "2.5.0"
