[package]
name = "meld"
version = "0.2.0"
edition = "2024"
description = "Lua-configurable terminal fetch/status tool"
readme = "README.md"
publish = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
chrono = "0.4"
directories = "6.0.0"
image = "0.25.8"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
owo-colors = "4.3.0"
ratatui = "0.30.0"
rspotify = { version = "0.16.0", default-features = false, features = ["client-ureq", "ureq-rustls-tls", "cli"] }
serde_json = "1.0"
ureq = { version = "2.12.1", default-features = false, features = ["json", "tls"] }
walkdir = "2.5.0"
